# monegle

./: .gitignore  BUILD.md  BUILD_FIXES.md  CAMERA_TROUBLESHOOTING.md  CHANGELOG.md  Cargo.toml  DRY_RUN_GUIDE.md  FEASIBILITY_TEST_SUMMARY.txt  GAS_COST_ANALYSIS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  PROTOCOL.md  QUICKSTART.md  README.md  TEST_EXECUTION_GUIDE.md  config.example.toml  metrics.json  quickstart.sh
contracts/: foundry.toml
contracts/src/: MonadStreamer.sol
crates/camera-test/: Cargo.toml
crates/camera-test/src/: main.rs
crates/monegle-core/: Cargo.toml
crates/monegle-core/src/: ascii.rs  codec.rs  config.rs  efficient_rgb.rs  lib.rs  synthetic.rs  types.rs
crates/monegle-receiver/: Cargo.toml
crates/monegle-receiver/src/: buffer.rs  decoder.rs  display.rs  lib.rs  listener.rs  main.rs
crates/monegle-sender/: Cargo.toml
crates/monegle-sender-test/: Cargo.toml
crates/monegle-sender-test/src/: main.rs  rpc_client.rs
crates/monegle-sender/src/: batcher.rs  blockchain.rs  capture.rs  converter.rs  counter_mode.rs  main.rs
docs/: README.md  SUMMARY.md  architecture.md  cost-analysis.md  execution-events-integration.md  feasibility-test-plan.md  implementation-plan.md  rebroadcast-node.md
frames/: frame_000000_seq0_idx0.txt  frame_000000_seq1_idx0.txt  frame_000001_seq0_idx2.txt  frame_000001_seq1_idx1.txt  frame_000002_seq0_idx3.txt  frame_000002_seq1_idx2.txt  frame_000003_seq0_idx4.txt  frame_000003_seq1_idx3.txt  frame_000004_seq0_idx5.txt  frame_000004_seq1_idx4.txt  frame_000005_seq1_idx0.txt  frame_000005_seq1_idx5.txt  frame_000006_seq1_idx1.txt  frame_000006_seq2_idx0.txt  frame_000007_seq1_idx2.txt  frame_000007_seq2_idx1.txt  frame_000008_seq1_idx3.txt  frame_000008_seq2_idx2.txt  frame_000009_seq1_idx4.txt  frame_000009_seq2_idx3.txt  frame_000010_seq1_idx5.txt  frame_000010_seq2_idx4.txt  frame_000011_seq2_idx0.txt  frame_000011_seq2_idx5.txt  frame_000012_seq2_idx1.txt  frame_000012_seq3_idx0.txt  frame_000013_seq2_idx2.txt  frame_000013_seq3_idx1.txt  frame_000014_seq2_idx3.txt  frame_000014_seq3_idx2.txt  frame_000015_seq2_idx4.txt  frame_000015_seq3_idx3.txt  frame_000016_seq2_idx5.txt  frame_000016_seq3_idx4.txt  frame_000017_seq3_idx0.txt  frame_000017_seq3_idx5.txt  frame_000018_seq3_idx1.txt  frame_000018_seq4_idx0.txt  frame_000019_seq3_idx2.txt  frame_000019_seq4_idx1.txt  (+201 more)
scripts/: analyze-test-results.py  check-setup.sh  deploy.sh  test-all-rpcs.sh
