[package]
name = "monegle-receiver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "monegle-receiver"
path = "src/main.rs"

[dependencies]
monegle-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
config.workspace = true
alloy.workspace = true

# Terminal UI
ratatui = "0.26"
crossterm = "0.27"

# Async
futures = "0.3"

# Time
chrono = "0.4"
